[gd_scene load_steps=3 format=2]

[ext_resource path="res://Planner/Loader.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/_handlemenucalls.gd" type="Script" id=2]

[node name="Basic" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loader" parent="." instance=ExtResource( 1 )]
anchor_left = 0.64
anchor_top = 0.45
anchor_bottom = 0.85

[node name="Save" parent="Loader" index="2"]
visible = false

[node name="New" type="Button" parent="Loader"]
margin_left = 60.4847
margin_top = 34.0
margin_right = 100.485
margin_bottom = 54.0
text = "New"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_top = 0.45
anchor_bottom = 0.45
margin_right = 42.0
margin_bottom = 20.0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.4
bbcode_enabled = true
bbcode_text = "Basic visualisation tool capabilities, note that saves created from here can not use the auto-triforce functionality.
Saves loaded will inherit the Basic/Bobo features.
Click 'Load' to load an existing save, click 'New' to start a fresh."
text = "Basic visualisation tool capabilities, note that saves created from here can not use the auto-triforce functionality.
Saves loaded will inherit the Basic/Bobo features.
Click 'Load' to load an existing save, click 'New' to start a fresh."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Loader/New" to="." method="_on_New"]
[connection signal="pressed" from="Back" to="." method="_on_Back"]

[editable path="Loader"]
